# Aula 63/server/src/db/models/user.js
@@ -1,0 +1,57 @@
+'use strict';
+const bcrypt = require("bcrypt");
+const {
+  Model
+} = require('sequelize');
+module.exports = (sequelize, DataTypes) => {
+  class User extends Model {    
+    static associate(models) {
+      this.hasMany(models.Todo, { foreignKey: "user_id", as: "todos" });
+    }
+
+    isPasswordValid(password) {
+      return bcrypt.compareSync(password, this.password);
+    }
+
+    toJSON() {
+      return {
+        ...this.get(),
+        password: undefined
+      }
+    }
+  };
+  User.init({
+    id: {
+      type: DataTypes.UUID,
+      primaryKey: true,
+      defaultValue: DataTypes.UUIDV4
+    },
+    name: {
+      type: DataTypes.STRING,
+      allowNull: false
+    },
+    email: {
+      type: DataTypes.STRING,
+      allowNull: false,
+      unique: true,
+      validate: {
+        isEmail: { msg: "Invalid e-mail"}        
+      }
+    },
+    password: {
+      type: DataTypes.STRING,
+      allowNull: false,
+      set(password) {
+        this.setDataValue("password", bcrypt.hashSync(password, 10));
+      }
+    },
+    avatar: DataTypes.STRING
+  }, {
+    sequelize,
+    modelName: 'User',
+    hooks: {
+      
+    }
+  });
+  return User;
+};
